# IMAC2-OGL-PROJET

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WorldIMaker.cbp  cmake_install.cmake  compile_commands.json  cube.txt
Doc/: Diagrammes de classe
assets/shaders/CubeShader/: text3D.fs.glsl
assets/shaders/cubeShader/: text3D.fs.glsl
assets/shaders/cursorShader/: cursorEdges.fs.glsl
assets/shaders/lightShader/: cubeLighted.fs.glsl  cubeLighteddir.fs.glsl  cubeLightedpoint.glsl  dirLight.fs.glsl  pointlight.fs.glsl
doc/: CMakeLists.txt  Doxyfile-html  Doxyfile-html.cmake  Makefile  cmake_install.cmake
include/: Grid.hpp  Interface.h  Interface.hpp  Interpolation.h  Save.hpp  Test.hpp  TrackballCamera.hpp  cube.hpp  cursor.hpp  forme3D.hpp  homeDoxygen.hpp  imakerProgram.hpp  light.hpp
libs/glimac/: Makefile
libs/glimac/include/: Program.hpp  SDLWindowManager.hpp
libs/glimac/src/: Geometry.cpp  Image.cpp  Program.cpp  SDLWindowManager.cpp  Shader.cpp
libs/glm/: CMakeLists.txt
libs/glm/detail/: func_common.hpp  func_exponential.hpp  func_geometric.hpp  func_integer.hpp  func_matrix.hpp  func_noise.hpp  func_noise.inl  func_packing.hpp  func_trigonometric.hpp  func_vector_relational.hpp
libs/glm/gtc/: matrix_transform.hpp  packing.hpp  quaternion.hpp  type_precision.hpp  type_ptr.hpp
libs/glm/gtx/: compatibility.hpp  gradient_paint.hpp  int_10_10_10_2.hpp  intersect.hpp  io.hpp  matrix_query.hpp  norm.hpp  normalize_dot.hpp  perpendicular.hpp  quaternion.hpp  rotate_vector.hpp  simd_quat.hpp  spline.hpp  string_cast.hpp  transform2.hpp  vector_angle.hpp
libs/imgui/: Makefile  cmake_install.cmake
libs/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
src/: CMakeLists.txt  Grid.cpp  Interface.cpp  Interpolation.cpp  Save.cpp  Test.cpp  TrackballCamera.cpp  cube.cpp  cursor.cpp  forme3D.cpp  light.cpp  main.cpp
